@@ -25,7 +25,7 @@
 #include "includes.h"
 #include "uuencode.h"
 
-RCSID("$OpenBSD: radix.c,v 1.16 2001/06/23 15:12:19 itojun Exp $");
+RCSID("$OpenBSD: radix.c,v 1.17 2001/11/19 19:02:16 mpech Exp $");
 
 #ifdef AFS
 #include <krb.h>
@@ -39,7 +39,7 @@ typedef u_short my_u_short;
 /* Nasty macros from BIND-4.9.2 */
 
 #define GETSHORT(s, cp) { \
-	register my_u_char *t_cp = (my_u_char *)(cp); \
+	my_u_char *t_cp = (my_u_char *)(cp); \
 	(s) = (((my_u_short)t_cp[0]) << 8) \
 	    | (((my_u_short)t_cp[1])) \
 	    ; \
@@ -47,7 +47,7 @@ typedef u_short my_u_short;
 }
 
 #define GETLONG(l, cp) { \
-	register my_u_char *t_cp = (my_u_char *)(cp); \
+	my_u_char *t_cp = (my_u_char *)(cp); \
 	(l) = (((my_u_int32_t)t_cp[0]) << 24) \
 	    | (((my_u_int32_t)t_cp[1]) << 16) \
 	    | (((my_u_int32_t)t_cp[2]) << 8) \
@@ -57,16 +57,16 @@ typedef u_short my_u_short;
 }
 
 #define PUTSHORT(s, cp) { \
-	register my_u_short t_s = (my_u_short)(s); \
-	register my_u_char *t_cp = (my_u_char *)(cp); \
+	my_u_short t_s = (my_u_short)(s); \
+	my_u_char *t_cp = (my_u_char *)(cp); \
 	*t_cp++ = t_s >> 8; \
 	*t_cp   = t_s; \
 	(cp) += 2; \
 }
 
 #define PUTLONG(l, cp) { \
-	register my_u_int32_t t_l = (my_u_int32_t)(l); \
-	register my_u_char *t_cp = (my_u_char *)(cp); \
+	my_u_int32_t t_l = (my_u_int32_t)(l); \
+	my_u_char *t_cp = (my_u_char *)(cp); \
 	*t_cp++ = t_l >> 24; \
 	*t_cp++ = t_l >> 16; \
 	*t_cp++ = t_l >> 8; \
@@ -75,9 +75,9 @@ typedef u_short my_u_short;
 }
 
 #define GETSTRING(s, p, p_l) {			\
-    register char *p_targ = (p) + p_l;		\
-    register char *s_c = (s);			\
-    register char *p_c = (p);			\
+    char *p_targ = (p) + p_l;		\
+    char *s_c = (s);			\
+    char *p_c = (p);			\
     while (*p_c && (p_c < p_targ)) {		\
 	*s_c++ = *p_c++;			\
     }						\
